--- a/starter/package.json
+++ b/starter/package.json
@@ -9,6 +9,7 @@
     "lodash.debounce": "^4.0.8",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
